--- a/demographics.yml
+++ b/demographics.yml
@@ -6,3 +6,127 @@ content:
     With independent, we mean that they offer their fonts on their own websites. Distribution platforms or websites are not considered in the research. The database includes foundries and designers of various sizes and from different locations, trying to cover as many countries as possible. Ideally, we include 5 examples per country, with a maximum limit of 10 in countries with a larger number of foundries and designers.
   more: |
     The research is centered on the Latin Script, although some foundries and designers offer multiscript fonts. The sample consists of 154 entries from 44 different countries, and it is distributed as follows:
+
+extra: demographics
+
+chart:
+  title: Number of foundries by country
+  legend:
+    women: With women in led positions
+    men: Without women in led positions
+  data:
+    - name: Denmark
+      total: 3
+      women: 0
+    - name: Argentina
+      total: 6
+      women: 3
+    - name: Australia
+      total: 5
+      women: 0
+    - name: Austria
+      total: 5
+      women: 1
+    - name: Belgium
+      total: 3
+      women: 1
+    - name: Brazil
+      total: 5
+      women: 0
+    - name: Bulgaria
+      total: 2
+      women: 3
+    - name: Switzerland
+      total: 9
+      women: 1
+    - name: United Kingdom
+      total: 9
+      women: 3
+    - name: Canada
+      total: 5
+      women: 1
+    - name: Chile
+      total: 2
+      women: 1
+    - name: Croatia
+      total: 1
+      women: 0
+    - name: Czechia
+      total: 9
+      women: 2
+    - name: Italy
+      total: 5
+      women: 2
+    - name: Costa Rica
+      total: 1
+      women: 1
+    - name: France
+      total: 10
+      women: 4
+    - name: Finland
+      total: 6
+      women: 0
+    - name: Spain
+      total: 9
+      women: 3
+    - name: Greece
+      total: 2
+      women: 0
+    - name: Colombia
+      total: 2
+      women: 0
+    - name: The Netherlands
+      total: 9
+      women: 4
+    - name: Poland
+      total: 5
+      women: 1
+    - name: Turkey
+      total: 1
+      women: 0
+    - name: Germany
+      total: 10
+      women: 6
+    - name: Iceland
+      total: 2
+      women: 0
+    - name: India
+      total: 2
+      women: 0
+    - name: Indonesia
+      total: 4
+      women: 0
+    - name: USA
+      total: 10
+      women: 5
+    - name: Slovakia
+      total: 1
+      women: 0
+    - name: Japan
+      total: 2
+      women: 0
+    - name: Kazakhstan
+      total: 1
+      women: 0
+    - name: United Arab Emirates
+      total: 3
+      women: 0
+    - name: Norway
+      total: 5
+      women: 1
+    - name: Portugal
+      total: 5
+      women: 2
+    - name: Romania
+      total: 2
+      women: 0
+    - name: Serbia
+      total: 2
+      women: 1
+    - name: Slovenia
+      total: 2
+      women: 1
+
+resources:
+  title: Related resources
+  links:
