--- a/deno.json
+++ b/deno.json
@@ -1,6 +1,6 @@
 {
   "imports": {
-    "lume/": "https://deno.land/x/lume@v2.5.1/"
+    "lume/": "https://cdn.jsdelivr.net/gh/lumeland/lume@a63847200270d43163ffdae69db47a18f3b867ec/"
   },
   "tasks": {
     "lume": "echo \"import 'lume/cli.ts'\" | deno run -A -",
