--- a/en/licenses/desktop.yml
+++ b/en/licenses/desktop.yml
@@ -1,9 +1,89 @@
 title: Desktop
 id: licenses-desktop
 theme: light
+extra: license
 order: 3a
 content:
   first: |
     With independent, we mean that they offer their fonts on their own websites. Distribution platforms or websites are not considered in the research. The database includes foundries and designers of various sizes and from different locations, trying to cover as many countries as possible. Ideally, we include 5 examples per country, with a maximum limit of 10 in countries with a larger number of foundries and designers.
   more: |
     The research is centered on the Latin Script, although some foundries and designers offer multiscript fonts. The sample consists of 154 entries from 44 different countries, and it is distributed as follows:
+
+chart:
+  title: Popular units of measurement for desktop licenses
+  rows:
+    - name: Number of users
+      value: 80
+    - name: Workstations
+      value: 50
+    - name: Number of employees
+      value: 25
+    - name: Number of users
+      value: 80
+    - name: Workstations
+      value: 50
+    - name: Number of employees
+      value: 25
+
+pricing:
+  title: Pricing in desktop licenses
+  prices:
+    - 115
+    - 150
+    - 175
+    - 50
+    - 100
+    - 125
+    - 80
+    - 60
+    - 140
+    - 95
+    - 45
+    - 45
+    - 35
+    - 70
+    - 85
+    - 55
+    - 160
+    - 130
+    - 180
+    - 40
+    - 65
+    - 120
+    - 105
+    - 105
+    - 105
+    - 105
+    - 105
+    - 105
+    - 105
+    - 115
+    - 115
+    - 115
+    - 115
+    - 30
+    - 135
+    - 155
+    - 170
+    - 90
+    - 110
+    - 195
+    - 75
+    - 185
+    - 115
+    - 145
+    - 50
+    - 125
+    - 100
+    - 150
+    - 80
+    - 140
+    - 35
+    - 95
+    - 60
+    - 180
+    - 160
+    - 70
+    - 130
+    - 85
+    - 175
