--- a/en/resources.yml
+++ b/en/resources.yml
@@ -20,11 +20,11 @@ resources:
   - title: Women Leading Foundries
     description: List of foundries leaded by at least one women
     type: fontlicensingmess
-    url: "/women"
+    url: /women/
   - title: Map of foundries
     description: Map with independent foundries around the World
     type: fontlicensingmess
-    url: "/"
+    url: /map/
   - title: Tipografías para web, licencias y comercio justo
     description: 21 March 2024 · Gràffica, Alphabettes<br>Spanish, English
     type: url
