--- a/en/resources.yml
+++ b/en/resources.yml
@@ -3,18 +3,6 @@ id: resources
 theme: dark
 order: 4
 layout: layouts/resources.vto
-# Icons: https://feathericons.com/
-filters: Filter resources
-types:
-  - label: Foundry articles
-    value: foundry
-    icon: type
-  - label: Videos
-    value: video
-    icon: youtube
-  - label: Url
-    value: url
-    icon: link-2
 
 resources:
   - title: Women Leading Foundries
@@ -29,53 +17,6 @@ resources:
     description: 21 March 2024 · Gràffica, Alphabettes<br>Spanish, English
     type: url
     url: "#"
-  - title: Tipografías para web, licencias y comercio justo
-    description: 21 March 2024 · Gràffica, Alphabettes<br>Spanish, English
-    type: url
-    url: "#"
-  - title: Tipografías para web, licencias y comercio justo
-    description: 21 March 2024 · Gràffica, Alphabettes<br>Spanish, English
-    type: video
-    url: "#"
-  - title: Tipografías para web, licencias y comercio justo
-    description: 21 March 2024 · Gràffica, Alphabettes<br>Spanish, English
-    type: video
-    url: "#"
-  - title: Tipografías para web, licencias y comercio justo
-    description: 21 March 2024 · Gràffica, Alphabettes<br>Spanish, English
-    type: url
-    url: "#"
-  - title: Tipografías para web, licencias y comercio justo
-    description: 21 March 2024 · Gràffica, Alphabettes<br>Spanish, English
-    type: video
-    url: "#"
-  - title: Tipografías para web, licencias y comercio justo
-    description: 21 March 2024 · Gràffica, Alphabettes<br>Spanish, English
-    type: foundry
-    url: "#"
-  - title: Tipografías para web, licencias y comercio justo
-    description: 21 March 2024 · Gràffica, Alphabettes<br>Spanish, English
-    type: foundry
-    url: "#"
-  - title: Tipografías para web, licencias y comercio justo
-    description: 21 March 2024 · Gràffica, Alphabettes<br>Spanish, English
-    type: foundry
-    url: "#"
-  - title: Tipografías para web, licencias y comercio justo
-    description: 21 March 2024 · Gràffica, Alphabettes<br>Spanish, English
-    type: url
-    url: "#"
-  - title: Tipografías para web, licencias y comercio justo
-    description: 21 March 2024 · Gràffica, Alphabettes<br>Spanish, English
-    type: video
-    url: "#"
-  - title: Tipografías para web, licencias y comercio justo
-    description: 21 March 2024 · Gràffica, Alphabettes<br>Spanish, English
-    type: foundry
-    url: "#"
 
-content:
-  first: |
-    With independent, we mean that they offer their fonts on their own websites. Distribution platforms or websites are not considered in the research. The database includes foundries and designers of various sizes and from different locations, trying to cover as many countries as possible. Ideally, we include 5 examples per country, with a maximum limit of 10 in countries with a larger number of foundries and designers.
-  more: |
-    The research is centered on the Latin Script, although some foundries and designers offer multiscript fonts. The sample consists of 154 entries from 44 different countries, and it is distributed as follows:
+content: |
+  With independent, we mean that they offer their fonts on their own websites. Distribution platforms or websites are not considered in the research. The database includes foundries and designers of various sizes and from different locations, trying to cover as many countries as possible. Ideally, we include 5 examples per country, with a maximum limit of 10 in countries with a larger number of foundries and designers.
