--- a/en/support.yml
+++ b/en/support.yml
@@ -1,9 +1,19 @@
-title: Support this mess!
+title: Support
 id: support
 theme: dark
 order: 6
-content:
-  first: |
-    With independent, we mean that they offer their fonts on their own websites. Distribution platforms or websites are not considered in the research. The database includes foundries and designers of various sizes and from different locations, trying to cover as many countries as possible. Ideally, we include 5 examples per country, with a maximum limit of 10 in countries with a larger number of foundries and designers.
-  more: |
-    The research is centered on the Latin Script, although some foundries and designers offer multiscript fonts. The sample consists of 154 entries from 44 different countries, and it is distributed as follows:
+layout: layouts/support.vto
+content: |
+  With independent, we mean that they offer their fonts on their own websites. Distribution platforms or websites are not considered in the research. The database includes foundries and designers of various sizes and from different locations, trying to cover as many countries as possible. Ideally, we include 5 examples per country, with a maximum limit of 10 in countries with a larger number of foundries and designers.
+
+links:
+  - icon: opencollective
+    text: Open Collective
+    url: https://opencollective.com/font-licensing-mess
+
+form:
+  intro: Contact us throught this contact form or sending us an email at [hola@fontlicensingmess.com](mailto:hola@fontlicensingmess.com)
+  email: Your email
+  name: Your name
+  content: Tell us something!
+  submit: Contact us!
