--- a/en/licenses.yml
+++ b/en/licenses.yml
@@ -1,5 +1,5 @@
-title: Licenses
-id: licenses
+title: Licences
+id: licences
 theme: dark
 order: 3
 content:
@@ -7,9 +7,9 @@ content:
     With independent, we mean that they offer their fonts on their own websites. Distribution platforms or websites are not considered in the research. The database includes foundries and designers of various sizes and from different locations, trying to cover as many countries as possible. Ideally, we include 5 examples per country, with a maximum limit of 10 in countries with a larger number of foundries and designers.
   more: |
     The research is centered on the Latin Script, although some foundries and designers offer multiscript fonts. The sample consists of 154 entries from 44 different countries, and it is distributed as follows:
-extra: licenses
+extra: licences
 chart:
-  title: Number of foundries by license
+  title: Number of foundries by licence
   data:
     - name: Desktop
       total: 50
