--- a/en/licenses/app.yml
+++ b/en/licenses/app.yml
@@ -1,7 +1,7 @@
 title: App
-id: licenses-app
+id: licences-app
 theme: light
-extra: license
+extra: licence
 order: 3c
 content:
   first: |
@@ -10,9 +10,9 @@ content:
     The research is centered on the Latin Script, although some foundries and designers offer multiscript fonts. The sample consists of 154 entries from 44 different countries, and it is distributed as follows:
 
 chart:
-  title: Popular units of measurement for app licenses
-  key: "app"
+  title: Popular measuring units for app licences
+  key: app
 
 pricing:
-  title: Pricing in app licenses
-  key: "app-pricing"
+  title: Pricing in app licences
+  key: app-pricing
