--- a/en/licenses/desktop.yml
+++ b/en/licenses/desktop.yml
@@ -10,7 +10,7 @@ content:
     The research is centered on the Latin Script, although some foundries and designers offer multiscript fonts. The sample consists of 154 entries from 44 different countries, and it is distributed as follows:
 
 chart:
-  title: Popular measuring units for desktop licences
+  title: Popular measuring units in desktop licences
   key: desktop
 
 pricing:
