--- a/en/about-us.yml
+++ b/en/about-us.yml
@@ -4,7 +4,7 @@ id: about-us
 theme: light
 order: 5
 content: |
-  Font Licensing Mess is an independent research project born to shed some light on one of the most complex and least understood aspects of the modern type industry: font licensing. Over the past decades, digital type design and font production have experienced significant growth. However, the legal and commercial frameworks governing font use have not evolved with the same clarity. The result is an opaque and fragmented system that is often challenging to navigate, even for those working within the industry. 
+  Font Licensing Mess is an independent research project born to shed some light on one of the most complex and least understood aspects of the modern type industry: font licensing.  
 people:
   - img: /img/equipo2.jpg
     bio: |
