--- a/en/licenses/web.yml
+++ b/en/licenses/web.yml
@@ -10,5 +10,5 @@ content:
     The research is centered on the Latin Script, although some foundries and designers offer multiscript fonts. The sample consists of 154 entries from 44 different countries, and it is distributed as follows:
 
 chart:
-  title: Popular measuring units for web licences
+  title: Popular measuring units in web licences
   key: web
