--- a/en/demographics.yml
+++ b/en/demographics.yml
@@ -6,7 +6,7 @@ content:
   first: |
     The sample of this research is based on the following criteria: independence, clarity, representativeness, and accessibility of legal information. It includes 171 foundries and designers from 44 countries. All of them offer commercial font licences in English or Spanish. Free, open-source, and libre fonts are not included in the analysis.
   more: |
-    Font retailers and distribution platforms have been excluded, putting the focus on the terms directly provided by the font creators. The data was gathered from publicly available information on foundry websites between July 2023 and April 2025.
+    Font retailers and distribution platforms have been excluded, putting the focus on the terms directly provided by the creators of the fonts. The data was gathered from publicly available information on foundry websites between July 2023 and April 2025.
 extra: demographics
 
 chart:
