--- a/en/licenses.yml
+++ b/en/licenses.yml
@@ -4,9 +4,12 @@ theme: dark
 order: 3
 content:
   first: |
-    With independent, we mean that they offer their fonts on their own websites. Distribution platforms or websites are not considered in the research. The database includes foundries and designers of various sizes and from different locations, trying to cover as many countries as possible. Ideally, we include 5 examples per country, with a maximum limit of 10 in countries with a larger number of foundries and designers.
+    We have created visuals that illustrate the most common types of licences, font use measuring units, and the base prices for each category, highlighting patterns and differences in commercial strategies.
   more: |
-    The research is centered on the Latin Script, although some foundries and designers offer multiscript fonts. The sample consists of 154 entries from 44 different countries, and it is distributed as follows:
+    There are different models in the market; some foundries divide their licences into a wide range of options, while others simplify the process by permitting multiple uses in their basic licences. Uses like electronic publications (ePub) and social media are often included in desktop licences. 
+    
+    It’s remarkable that 22% of foundries in our sample offer licence packs that combine various uses. In these cases, we have included their information in all the categories specified on the pack. Less common licences, like server, broadcasting or third-party, are generally unavailable for direct sale but are provided on demand.
+
 extra: licences
 chart:
   title: Number of foundries by licence
