--- a/en/licenses.yml
+++ b/en/licenses.yml
@@ -4,7 +4,7 @@ theme: dark
 order: 3
 content:
   first: |
-    We have created visuals that illustrate the most common types of licences, font use measuring units, and the base prices for each category, highlighting patterns and differences in commercial strategies.
+    We have created visuals that illustrate the most common types of licences, font use measuring units, and the base prices for each category, highlighting patterns and differences in commercial strategies. Below, we present the number of entries considered in each type of licence.
   more: |
     There are different models in the market; some foundries divide their licences into a wide range of options, while others simplify the process by permitting multiple uses in their basic licences. Electronic publications (ePub) and social media, for example, are often included in desktop agreements. 
     
