--- a/en/licenses.yml
+++ b/en/licenses.yml
@@ -8,7 +8,7 @@ content:
   more: |
     There are different models in the market; some foundries divide their licences into a wide range of options, while others simplify the process by permitting multiple uses in their basic licences. Electronic publications (ePub) and social media, for example, are often included in desktop agreements. 
     
-    It’s remarkable that 22% of foundries in our sample offer licence packs that combine various uses. These entries has been considered in all the categories specified on the pack. Less common licences, like server, broadcasting or third-party, are generally unavailable for direct sale but are provided on demand.
+    It’s remarkable that 22% of foundries in our sample offer licence packs that combine various uses. These entries has been considered in all the categories specified on the pack. Less common licences, like server, broadcasting or third-party, are generally unavailable for direct sale but provided on demand.
 
 extra: licences
 chart:
