--- a/en/resources.yml
+++ b/en/resources.yml
@@ -19,4 +19,4 @@ resources:
     url: "#"
 
 content: |
-  We are sharing additional material that we developed during the research process. This content may be of interest to our audience and serve as a useful resource for other initiatives.
+  We have developed this additional material during the research process. The shared content may be of interest to our audience and serve as a useful resource for other initiatives.
