--- a/en/resources.yml
+++ b/en/resources.yml
@@ -9,11 +9,11 @@ resources:
     description: A directory of women-led type foundries to enhance their presence and visibility in the public sphere.
     type: fontlicensingmess
     url: /women/
-  - title: Map of foundries
-    description: Independent type foundries in the international scene. A valuable resource for tracing patterns by region and identifying areas with less visibility or representation. 
+  - title: Map of independent foundries
+    description: The independent type industry in a worldwide map that exhibits patterns by regions and identifies areas with less representation. 
     type: fontlicensingmess
     url: /map/
-  - title: Other resources and publications
+  - title: Other sources and publications
     description: A collection of external resources, including links to articles, surveys, legal advice, and other content focused on the topic.
     type: url
     url: "#"
