--- a/es/recursos.yml
+++ b/es/recursos.yml
@@ -5,18 +5,18 @@ order: 4
 layout: layouts/resources.vto
 
 resources:
-  - title: Women Leading Foundries
-    description: List of foundries leaded by at least one women
+  - title: Mujeres que lideran fundiciones
+    description: Un directorio de fundiciones dirigidas por mujeres, creado para mejorar su presencia y visibilidad en la esfera pública.
     type: fontlicensingmess
     url: /women/
-  - title: Map of foundries
-    description: Map with independent foundries around the World
+  - title: Mapa de fundiciones independientes
+    description: Un mapamundi para localizar fundiciones tipográficas independientes, definir patrones por regiones e identificar zonas con menor visibilidad.
     type: fontlicensingmess
     url: /map/
-  - title: Tipografías para web, licencias y comercio justo
-    description: 21 March 2024 · Gràffica, Alphabettes<br>Spanish, English
+  - title: Otras fuentes y publicaciones
+    description: 2Una lista de recursos externos, con enlaces y referencias a artículos, estudios, consejos legales y otros materiales vinculados con el tema.
     type: url
     url: "#"
 
 content: |
-  With independent, we mean that they offer their fonts on their own websites. Distribution platforms or websites are not considered in the research. The database includes foundries and designers of various sizes and from different locations, trying to cover as many countries as possible. Ideally, we include 5 examples per country, with a maximum limit of 10 in countries with a larger number of foundries and designers.
+  Compartimos aquí contenidos complementarios que hemos desarrollado durante la investigación. Creemos que puede ser de interés para nuestra audiencia y útil en otras iniciativas.
