--- a/en/resources.yml
+++ b/en/resources.yml
@@ -8,7 +8,7 @@ resources:
   - title: Women leading foundries
     description: A directory of women-led type foundries to enhance their presence and visibility in the public sphere.
     type: fontlicensingmess
-    url: /women/
+    url: "https://www.notion.so/1d69824c60a180c1b4dbd7e63685f971?v=1d69824c60a18196a279000c0e64b95f&pvs=4"
   - title: Map of independent foundries
     description: The independent type industry in a worldwide map that exhibits patterns by regions and identifies areas with less representation. 
     type: fontlicensingmess
