--- a/en/about-us.yml
+++ b/en/about-us.yml
@@ -8,7 +8,7 @@ content: |
 people:
   - img: /assets/img/equipo2.jpg
     bio: |
-      María Ramos (Santa Comba, 1982) is an independent researcher based in Santiago de Compostela. She holds a Master’s degree in Typeface Design from the University of Reading and is a co-founder of the Galician-Swedish type foundry [NM type](https://www.nmtype.com/). María has authored articles on design and typography for various media and has given numerous presentations at design schools and professional conferences. In 2021, she was a researcher in the [Study of the Design Economy in Galicia](https://estudodeseno.dag.gal/) and is currently involved in developing the [Galician Design Archive AR\DE](https://arde.gal/). Her interest in font licensing emerged while navigating the complexities of font distribution, both as a font developer and as a user for her graphic and editorial projects.
+      María Ramos (Santa Comba, 1982) is an independent designer and researcher based in Santiago de Compostela. She holds a Master’s degree in Typeface Design from the University of Reading and is a co-founder of the Galician-Swedish type foundry [NM type](https://www.nmtype.com/). María has authored articles on design and typography for various media and has given numerous presentations at design schools and professional conferences. In 2021, she was a researcher in the [Study of the Design Economy in Galicia](https://estudodeseno.dag.gal/) and is currently involved in developing the [Galician Design Archive AR\DE](https://arde.gal/). Her interest in font licensing emerged while navigating the complexities of font distribution, both as a font developer and as a user for her graphic and editorial projects.
 
   - img: /assets/img/equipo.jpg
     bio: |
