--- a/es/soporte.yml
+++ b/es/soporte.yml
@@ -4,7 +4,7 @@ theme: dark
 order: 6
 layout: layouts/support.vto
 content: |
-  If you believe our research and the content we provide are valuable, there are several ways to show your support. Please help us continue collecting and updating our databases by sending relevant information. You can also share this project and its resources with others. Additionally, if you want, you can make a small donation using the link to Open Collective below to help cover project expenses. Thank you for your support!
+  Si crees que este proyecto de investigación es importante y su contenido te ha resultado útil, puedes contibuir de varias maneras. Ayúdanos a seguir recopilando y actualizando nuestras bases de datos enviando información que consideres relevante. Comparte el proyecto y los recursos que facilitamos con otras personas y entidades. También puedes hacer una pequeña donación, a través del enlace a Open Collective que aparece a continuación, y cubrir parte de los gastos del proyecto. ¡Muchas gracias por tu apoyo!
   
 links:
   - icon: opencollective
@@ -12,8 +12,8 @@ links:
     url: https://opencollective.com/font-licensing-mess
 
 form:
-  intro: You can contact us by filling out this form or emailing us at [hola@fontlicensingmess.com](mailto:hola@fontlicensingmess.com)
-  email: Your email
-  name: Your name
-  content: Tell us something!
-  submit: Send
+  intro: Puedes escribirnos rellenando este formulario o enviarnos un email a [hola@fontlicensingmess.com](mailto:hola@fontlicensingmess.com)
+  email: Tu email
+  name: Tu nombre
+  content: Cuéntanos algo
+  submit: Enviar
