--- a/es/licencias/escritorio.yml
+++ b/es/licencias/escritorio.yml
@@ -5,14 +5,16 @@ extra: licence
 order: 3a
 content:
   first: |
-    With independent, we mean that they offer their fonts on their own websites. Distribution platforms or websites are not considered in the research. The database includes foundries and designers of various sizes and from different locations, trying to cover as many countries as possible. Ideally, we include 5 examples per country, with a maximum limit of 10 in countries with a larger number of foundries and designers.
+    Este tipo de licencia otorga el derecho a utilizar una tipografía digital en aplicaciones de escritorio, como puede ser el software de diseño gráfico o los procesadores de texto. Permite instalar la fuente localmente en un ordenador u otro dispositivo electrónico, de manera que sea accesible en cualquier aplicación que soporte el formato de la fuente instalada.
   more: |
-    The research is centered on the Latin Script, although some foundries and designers offer multiscript fonts. The sample consists of 154 entries from 44 different countries, and it is distributed as follows:
+    Uno de los factores que hacen de este un tema especialmente complejo es la variedad de criterios que definen el uso de las fuentes. Se ofrecen licencias con distintos precios según unas unidades de medida espefícas. Sus valores marcan la cobertura y el coste de la licencia tipográfica, especificando las limitaciones de uso y definiendo escalas de precios. La licencia de Escritorio es la que tiene un mayor consenso en cuanto a las unidades de medición de uso tipográfico. Se utilizan únicamente 3 métricas diferentes y todas ellas están relacionadas con el número potencial de personas que usarán la fuente.
+    
+    El rango de precios para una fuente para texto en este tipo de licencia va desde los 8€ hasta los 200€, con el grueso concentrado alrededor de los 50€. Todos los valores se muestran en euros. Para los casos en los que hemos tenido que convertir la moneda hemos usado la web Xe.
 
 chart:
-  title: Popular measuring units in desktop licences
+  title: Unidades de medida en licencias de escritorio
   key: desktop
 
 pricing:
-  title: Pricing in desktop licences
+  title: Precios en licencias de escritorio
   key: desktop-pricing
